[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "genice2_extra/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["genice2_extra"]

[project]
dynamic = ["version"]
name = "genice2-extra"

[project.urls]
Homepage = "https://github.com/vitroid/genice-extra"

[tool.genice.urls]
repository = "https://github.com/vitroid/GenIce"
logo = "https://raw.githubusercontent.com/vitroid/GenIce/develop/logo/genice-v0.png"

# poetry self add poetry-version-plugin
[tool.poetry-version-plugin]
source = "init"

[tool.poetry]
name = "genice2-extra"
version = "0.0.0" # for GenIce2.2
description = "Official extra format plugins for GenIce2."
authors = ["vitroid <vitroid@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
genice2-cage = ">=2.3"
genice2-cif = ">=2.2"
genice2-mdanalysis = ">=0.7"
genice2-svg = ">=2.4.1"

[tool.poetry.group.dev.dependencies]
jinja2 = "^3.1.3"
toml = "^0.10.2"

